public/assets/styles/main.css
@import url("https://fonts.googleapis.com/css?family=Merriweather:400,400i,700");
@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&family=Rubik:wght@400;900&display=swap');

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, section, button  {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
    font-family: 'Rubik', sans-serif;
}
body{
    background: #eaecef;
}
#app-view {
    position: relative;
}
.top-navigation{
    width: 99vw;
    display: flex;
    justify-content: flex-end;
    opacity: 1;
    position: fixed;
    z-index: 15;
}
.top-navigation button{
    margin-top: 30px;
    margin-left: 10px;
    color: white;
    background: #0e0e0e;
    outline: none;
    font-size: 2em;
    padding: 10px 20px;
    border: 0;
    font-weight: 900;
    /*box-shadow: 4px 4px rgba(0,200,200,05);*/
}
button:hover{
    cursor: pointer;
    background: #464646;
    box-shadow: 4px 4px rgba(0,200,200,05);
}

#home-container {
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    opacity: 0;
    display: flex;
    justify-content: center;
}
#home-container.active {
    z-index: 2;
    -webkit-transition: opacity .6s, -webkit-transform .6s;
    transition: opacity .6s, -webkit-transform .6s;
    transition: transform .6s, opacity .6s .5s;
    transition: transform .6s, opacity .6s .5s, -webkit-transform .6s;
    opacity: 1;
}
svg {
    display: block;
    width: 100%;
    height: 100vh;
    top: 0;
    position: absolute;
    z-index: 0;
}
svg .polymorph {
    fill: #e3e3e3;
}
svg.active {
    z-index: 2;
}

.left-column {
    height: 100vh;
    width: 5vw;
}
.right-column {
    width: 95vw;
    height: 100vh;
}

.left-column p{
    font-size: 3.5em;
    writing-mode: vertical-rl;
    text-orientation: upright;
}

.main-body {
    height: 95%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
.intro-box{
    display: flex;
    justify-content: center;
}
.intro-box p{
    writing-mode: vertical-rl;
    text-orientation: upright;
    font-size: .65em;
    font-weight: 400;
}
.intro-text{
    border: 7px solid black;
    width: 50vw;
    height: 30vh;
    display: flex;
    justify-content: center;
    align-items: center;
}
.intro-text h1{
    font-weight: 900;
    font-size: 2.5em;
    font-family: 'Chelsea Market', cursive;
}
.intro-text a{
    text-decoration: none;
    text-underline: none;
    color: black
}

.work-container {
    position: absolute;
    top: 0;
    text-align: center;
    height: 100vh;
    width: 100vw;
}

.work-container #work-content{
    opacity: 0;
}

